--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -27,9 +27,9 @@
 
 \hline
 \rowcolor{lightgray}
-\textbf{Category} & \textbf{Sub-Category} & \textbf{Asserted Examples} & Rank \\  \hline
+\textbf{Category} & \textbf{Sub-category} & \textbf{Examples by assertion} & Rank \\  \hline
 
-\multirow{16}{*}{Backed}		& \multirow{8}{*}{Directly-Backed \& Redeemable$^{\dagger}$}		& \textbf{USDC} & 20 \\ \cline{3-4}
+\multirow{16}{*}{Backed}		& \multirow{8}{*}{Directly-Backed \& Redeemable$^{\dagger}$}		& USDC & 20 \\ \cline{3-4}
 						&														& TrueUSD & 26 \\ \cline{3-4}	
 						&														& Paxos & 38 \\ \cline{3-4}												
 						&														& Gemini Dollar & 52 \\ \cline{3-4}
@@ -37,14 +37,14 @@
 						&														& Stronghold USD & 891 \\ \cline{3-4}
 						&														& Petro & 1210 \\ \cline{3-4}
 						&														& \multicolumn{1}{p{5cm}|}{Ekon, WBTC, emparta} & $\perp$ \\ \cline{2-4}
-						& \multirow{6}{*}{Directly-Backed}  								& \textbf{Tether} & 6 \\ \cline{3-4}
+						& \multirow{6}{*}{Directly-Backed}  								& Tether & 6 \\ \cline{3-4}
 						&														& EURSToken & 95 \\ \cline{3-4}
 						&														& BitCNY & 304 \\ \cline{3-4}
 						&														& Terracoin & 1280 \\ \cline{3-4}
 						&														& Saga & 1495 \\  \cline{3-4}
 						&														& \multicolumn{1}{p{5cm}|}{GJY, Novatti AUD, UPUSD} & $\perp$ \\ \cline{2-4} 						
 						%& \multirow{1}{*}{Non-Redeemable and Indirectly-Backed}  			&  &  \\ \cline{2-4}
-						& \multirow{2}{*}{Indirectly-Backed}								& \textbf{Dai} & 57 \\ \cline{3-4}
+						& \multirow{2}{*}{Indirectly-Backed}								& Dai & 57 \\ \cline{3-4}
                                                 &														& BitUSD & 398 \\  \cline{1-4}
  
                                                                                                                  
@@ -58,6 +58,6 @@
 						& \multirow{1}{*}{Only internal information} 			& Basecoin & $\perp$ \\ \hline
 
 \end{tabular}
-\caption{Stablecoin proposals as of January 11, 2019. $\dagger$ \textit{Disclaimer:} Projects are classified according to what they assert; \eg we provide no warranty that projects classified as `redeemable' provide actual redemption of the assets that back their coins. Rank corrosponds to \textit{CoinMarketCap}. The projects bold are discussed in this paper.\label{tab:stablecoins}}
+\caption{Stablecoin proposals as of January 11, 2019. $\dagger$ \textit{Disclaimer:} Projects are classified according to what they assert; \eg we provide no warranty that projects classified as `redeemable' provide actual redemption of the assets that back their coins. Rank corrosponds to \textit{CoinMarketCap}.\label{tab:stablecoins}}
 \end{table}
 % ------------------------------------------------------------------------------------------------------------------------------------------------%
