Evaluation Framework Sketch (needs work!)

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -345,6 +345,24 @@ Next we consider stablecoins that are directly-backed---exactly as in the previo
  % The peg could be anything: fiat, assets, or a basket of assets
 
 %==========================================%
+\section{Evaluation Framework}
+
+%=============%
+\begin{table}
+  \begin{tabular}{|*{8}{c|}}
+    \hline
+      \multirow{2}{*}{Category} & \multicolumn{2}{c|}{Stability} &  \multicolumn{4}{c|}{Trust} & \multirow{2}{*}{Risks} 
+       \\ \cmidrule{2-7}
+      &  Under Valued & Above Valued & Issuance & Redemption & Transfer & Oracle & \\ 
+    \hline
+    1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\
+    \hline
+    1 & 2 & 3 & 4 & 5 & 6 & 7 & 8\\
+    \hline
+  \end{tabular}
+\end{table}
+%=============%
+
 
 \section{Discussion}
 
@@ -354,7 +372,6 @@ Next we consider stablecoins that are directly-backed---exactly as in the previo
 % Which blockchain
 
 \subsection{What Stability looks like}\label{sec:stability}
-
 \subsection{Ethereum's Gas}\label{sec:GasInvs}
 % Gas: non-redeemable backed by Ether. like putting Ether in the contract and get USD digital token. why non-redeemable? because you burn Gas to get your digital tokens.
 % Depending on how much the user wants to pay for ecah unit of Gas, this will determine how expensive the tx is in Ether.
