Notes on the properties in the evaluation framework

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -425,6 +425,28 @@ Internal                                                        \\
 
 \end{table}
 %=============%
+%About the evaluation Framework:
+%Stability
+%-----------
+%Is the currency stable to undervaluation?
+%Let's say, I buy a token for 80 cents and sell it for 1 dollar (which means the token is redeemable), then  I profit; but if it is not redeemable than I can't do this. 
+%The problem with undervaluation is that I may end up not being able to redeem my token for the underlying currency.
+%
+%Is the currency stable to overvaluation?
+%I buy a token for 1 dollar and if someone wants to buy it for 1.30, I profit.
+%
+%Trust
+%------
+%Does the token requires trust in a central party (for example to keep the required amount in reserves to back the coin)?
+%I need to be able to trust the system that it won't issue many tokens, so that the token deflates eventually.
+% Do I trust you'll issue right number of tokens? 
+%About transfer: liberty reserve, egold similar to tether only difference is that Tether is decentralized
+%in order to redeem whom should I trust?
+%Is there an oracle feed for determining the exchange rate?
+%
+%Risk
+%-----
+%For Dai: the underlying cdp can lose its value and the coin cannot be redeemed. About time sensitivity, semi-redeemable (there is a risk of not being able to redeem)
 
 \section{Discussion}
 
