another category of redeemability, negative interest rates

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -228,6 +228,10 @@ Next we consider stablecoins that are directly-backed---exactly as in the previo
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
+%There is middle category of redeemability.
+%similar to indirect owership of gold. It is redeemable for a share of the company that holds the gold.
+%check the backed ones for having shares or not
+
 \section{Type 2: Intervention-based Stablecoins}
 \label{sec:t2}
 
@@ -252,6 +256,10 @@ Next we consider stablecoins that are directly-backed---exactly as in the previo
 
 %(https://www.imf.org/external/pubs/ft/wp/wp9808.pdf): Difference between currency board and pegged exchange rate
 %=================%
+
+%Interest rates: borrower pays her loan + interest
+%Negative interest rate: borrower is paid the interest + she uses the loan
+%Sweden and Japan are examples of countries that use NIR 
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
@@ -530,7 +538,7 @@ The two spikes in the Fig~\ref{fig:Gas} correspond to (i) January 2018 when Cryp
 
 
 
-\textblue{ it would be nice to have a chart : Ether, Electricity (Global energy index), and Gas} \par
+\textblue{ Following text should be changed!} \par
 Our analysis in Section~\ref{sec:Intro} shows that cryptocurrencies exhibit less stable behavior compared to fiat currencies. Hence, we aim to analyze the price stability of \emph{Gas}. In Ethereum blockchain, every transaction contains a number of operations and there is a precise amount of gas unit associated with each.\footnote{http://ethdocs.org/en/latest/contracts-and-transactions/account-types-gas-and-transactions.html\#what-is-gas} Since Ether is volatile, this concept is introduced to have fixed cost for operations. Thus, even though the price of Ether changes, the amount of Ether corresponding to a unit of gas decreases; so that users pay the same price for the transactions on the Ethereum blockchain. Hence, the notion of gas is yet to be investigated to find out whether it exhibits behavior similar to fiat currencies or cryptocurrencies.
 
 %========================%
