--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -220,3 +220,11 @@ note = {(Accessed on 02/12/2019)}
   year={2015}
 }
 
+@article{anderson2019bitcoin,
+  title={Bitcoin redux},
+  author={Anderson, Ross John and Shumailov, Ilia and Ahmed, Mansoor and Rietmann, Alessandro},
+  year={2019}
+}
+
+
+
