--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -30,26 +30,21 @@ In response to Bitcoin's extreme volatility, a flood of proposals have been made
 In 2016, Ametrano introduces \textit{Hayek Money}, a new monetary policy of elastic non-discretionary supply that can be used to achieve a price stable cryptocurrency~\cite{ametrano2016hayek}. There are currently many blog posts on the overview of stablecoins and how to design them. According to these resources, the main three approaches to design a stablecoin are (i) fiat-collateralized, (ii) crypto-collateralized and (iii) non-collateralized (also known as algorithmic)(\eg~\cite{hackernoon, comprehensiveOverview, linkedin}) are the examples that give the overview of stablecoins based on these three approaches. \textblue{Note that these resources uses various terms for these three categories interchangeably, \textbf{do we have to mention this? if yes (i) is it the best way of saying it? and (ii) should we mention each and every of these terms? (algorithmic, seignorage shares, elastic money supply)}}
 Buterin, in one of the earliest blog posts on stable cryptocurrencies, discussed different techniques to measure cryptocurrencies' price and how to make adjustments in the supply to achieve a fixed price accordingly~\cite{TheSearc7:online}. Bitmex looked at the mechanics of the distributed stablecoins while focusing on two case studies (\ie BitShares (BitUSD) and MakerDAO (Dai))~\cite{bitmex}. Another report from a crypto company called Blockchain \footnote{https://www.blockchain.com} provides an extensive classification of 57 stablecoins together with discussions on issues related to governance (\eg legal structure, investors, partners \etc)~\cite{report}. In one of its blog posts, Consensys \footnote{https://consensys.net} describes stablecoins as "crypto-assets that maintain a stable value against a target price (e.g. USD)" and classify them according to the three main categories~\cite{StateofS96:online}. In~\cite{cryptoinsider}, the authors use a slightly different categorization to group 13 stabelcoin projects into two broad categories: (i) centralized-- which itself contains subcategories based on the type of the asset the coins are backed by (\eg fiat and gold), (ii) decentralized. Unlike other resources that define stablecoins within three categories (fiat-collateralized, crypto-collateralized, and non-collaterlaized), in this paper, we introduce new systemization of stablecoin projects and describe their fundamental primitives.
 
+%=============
+% Cite Ross Anderson's paper :"Bitcoin Reducx" :
+% Anderson\etal discuss different negative externalities that are introduced by Bitcoin~\cite{anderson2019bitcoin}. They perform and discuss taint tracking using First-In-First-Out (FIFO) algorithm ( inspired by the Clayton’s case) on some well-established Bitcoin theft scenarios. They also point out that crypto space needs effective regulation in order to function properly and securely, at the end they provide regulatory remarks for the future.
+%=============
+
+
+
 % our chart is basically same as others, but we do different categorization. We all cluster the same way, the main difference is that we strip out the terminalogies, not relying on economic terminologies, we try to represent the difference between these projects. A lot of them leave the readers with the burden of interpretation, things are not clearly defined, except for some technical terms that finance people know. BTW, the table is not our contribution.
 % also nobody looked at gas in the context of stablecoin.
-
-
-
 
 
 %The idea seigniorage shares was first introduced by Robert Sams in 2017, where he proposed a new dual token system that uses two coins to achieve price stability: (i) a stablecoin (\eg fiat currency) and (ii) a volatile coin (\eg equity shares)~\cite{sams2015note}.
 %(http://www.andrew.cmu.edu/user/azj/research/rzj_slides201808.pdf): three categories: 100\% USD Reserve backed coins, Protocol coins without redemption, Protocol coins with redemption in floating-rate crypto-currencies
 %(https://icosbull.com/whitepapers/2265/USDX_Protocol_whitepaper.pdf) three generations of stablecoins: Collateral-backed IOU, Collateral-backed on blockchain, Elastic monetary supply based. (This is a whitepaper for a protocol but it has a different classification)
 %(https://multicoin.capital/2018/01/17/an-overview-of-stablecoins/)  Stablecoins are discussed under three main categories as centralized IOU issuance, collateral backed, and seigniorage shares along with the discussion of different types of oracles and the challenges that stablecoins face.
-
-
-
-
-
-
-
-
-
 
 %=====================Gold vs ETFGold  ===================%
 %Gold ETF: Investors want  exposure to the asset that’s electronically traded without taking possession of the commodity.
@@ -479,7 +474,7 @@ Internal                                                        \\
 %=======GasToken details=======%
 % Operations that modify the global state of the Ethereum blockchain are very expensive \ie writing into a contract storage.
 % Ethereum motivates the user to free up space on the blockchain by refunding the Gas if they delete their contracts. This is what GasToken does.
-% GasToken is a smart contract that for the first time allows Ethereum users to buy and sell gas by tokenizing gas on the network.
+% GasToken is a smart contract that for the first time allows Ethereum users to buy and sell gas by tokenizing gas on the network. \footnote{https://github.com/projectchicago/gastoken}
 % They allow users to store Gas when it is cheap and use it once its price goes up.
 % Gas price refers to the amount of Ether you’re willing to pay for every unit of gas.
 % When a user stores cheap Gas, he can later spend that Gas to send a tx, that means now he pays for less gas for that tx to go through.
